add project report, update readme

--- a/extra/per_class_mAP.ipynb
+++ b/extra/per_class_mAP.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models import get_FasterRCNN_model\n",
+    "from models import JointDetector\n",
     "from train_joint import evaluate\n",
     "\n",
     "\n",
@@ -33,7 +33,7 @@
     "    'animals_object_class2ind', True, True, True, 'animals_part_mergedclass2ind', 0, None)\n",
     "\n",
     "obj_ind2class = {v: k for k,v in obj_class2ind.items()}\n",
-    "part_ind2class = {v: k foget_FasterRCNN_model in part_class2ind.items()}\n",
+    "part_ind2class = {v: k for k,v in part_class2ind.items()}\n",
     "\n",
     "model = JointDetector(obj_n_classes, part_n_classes, 0.9, False).to(device)\n",
     "model.load_state_dict(torch.load('../saved_model_joint_ft-0.90_animals_train.pth', map_location=device)['model'])\n",
